// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BRANCH reducers ADD BRANCH 1`] = `
Object {
  "branch": Object {},
  "confirmed": false,
  "error": null,
  "success": "Branch \\"San Martín de los Andes\\" created!",
}
`;

exports[`BRANCH reducers FETCH BRANCH 1`] = `
Object {
  "branch": Object {
    "__v": 0,
    "_id": "5c8f96b9cece9911f01dd092",
    "address": "938 Barby Way",
    "email": "mbrazier0@amazon.co.uk",
    "fax": "+86 829 425 7497",
    "information": "1",
    "name": "San Martín de los Andes",
    "phone": "+54 275 474 9318",
    "status": true,
  },
  "error": null,
  "success": null,
}
`;

exports[`BRANCH reducers FETCH BRANCHES 1`] = `
Object {
  "branch": Object {},
  "error": null,
  "list": Object {
    "limit": 7,
    "output": Array [
      Object {
        "__v": 0,
        "_id": "5c8f96b9cece9911f01dd092",
        "address": "938 Barby Way",
        "email": "mbrazier0@amazon.co.uk",
        "fax": "+86 829 425 7497",
        "information": "1",
        "name": "San Martín de los Andes",
        "phone": "+54 275 474 9318",
        "status": true,
      },
      Object {
        "__v": 0,
        "_id": "5c8f96b9cece9911f01dd093",
        "address": "903 Dottie Street",
        "email": "inerger1@businesswire.com",
        "fax": "+86 230 609 6364",
        "information": "t",
        "name": "Dingzhai",
        "phone": "+86 103 802 9655",
        "status": true,
      },
    ],
    "page": 1,
    "pages": 4,
    "results": 25,
  },
  "success": null,
}
`;

exports[`BRANCH reducers UPDATE BRANCH 1`] = `
Object {
  "branch": Object {},
  "confirmed": false,
  "error": null,
  "success": "Branch \\"San Martín de los Andes\\" successfully modified!",
}
`;
